Build App and Logs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,10 @@ jobs:
         run: ls -al
 
       - name: Check dotnet cli
-        run: dotnet
+        run: dotnet build
+
+      - name: List Files in Directory
+        run: ls .\TrickingLibrary.API.csproj -r
 
       - name: check npm cli
         run: npm -v
